<resources>
    <string name="app_name">Land Purchase</string>

    /**slogan**/
    <string name="slogan">Everyone Deserves The Opportunity Of Home</string>


    /**facebook login**/
    <string name="facebook_app_id">2542816435737031</string>
    <string name="facebook_login_protocol_name_fb">fb2542816435737031</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">b91ba1f05e14715a60edd295d325a862</string>
    <string name="title_activity_tracking_order">Map</string>

    /**strings**/
    <string name="landNumber">Land 01</string>
    <string name="landName">Land Name</string>
    <string name="landPrice">1,000</string>
    <string name="dest">Description</string>
    <string name="showComment">Show Comment</string>
    <string name="nameOfLandLocation">Name of Land</string>
    <string name="landLocation">Land Location</string>
    <string name="landAddress">Land Address</string>
    <string name="homeAddress">Home Address</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="mpesa">M-Pesa</string>
    <string name="bank">Bank</string>
    <string name="comment">Comment</string>
    <string name="name">Kevin</string>
    <string name="placeLandOrder">Place Land Order</string>
    <string name="news">Subscribe News</string>
    <string name="userPhone">User Phone</string>
    <string name="phoneNum">Phone Number</string>
    <string name="amount">Amount</string>
    <string name="mpesa_online">Mpesa Online Checkout</string>

    <string name="action_settings">Settings</string>
    <string name="countyName">name of County</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
