<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MpesaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/mpesa_online"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phoneET"
            android:hint="@string/phoneNum"
            android:layout_width="match_parent"
            android:textColor="@android:color/background_dark"
            android:text=""
            android:textColorHint="@android:color/background_dark"
            android:textSize="34sp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            app:met_baseColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/background_dark"
            app:met_singleLineEllipsis="true"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/amountET"
            android:hint="@string/amount"
            android:layout_width="match_parent"
            android:textColor="@android:color/background_dark"
            android:text=""
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:met_baseColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_primaryColor="@android:color/background_dark"
            app:met_singleLineEllipsis="true"

            />

    </LinearLayout>

    <Button
        android:id="@+id/btSignIn"
        android:text="Pay"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="startMpesa"
        android:layout_margin="8dp"
        android:background="@color/btnSignIn"
        />



</RelativeLayout>